--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container1">
             <div class="container-img">
                 <div class="imagen">
-                    <img src="img/cerveza peroni.png" />
+                    <img src="img/c.peronita.png" />
                 </div>
                 <div class="text">
                     <p>
@@ -77,23 +77,46 @@
                     </p>
                 </div>
             </div>
-            <div class="container-img">
-                <!-- <div class="text">
+            <div class="container-img1">
+                <div class="text1">
+                    <h1>
+                        Descuentos del 10% de tus bebidas preferidas
+                    </h1>
                     <p>
-                        La vida se disfruta más si de un buen licor con nuestros amigos y
-                        seres queridos podemos compartir, beber y disfrutar.
+                        Si hay licor también hay diversión por montón.
+                    </p>
+                    <a href="/">Descuentos</a>
+                </div>
+                <div class="imagen1">
+                    <img src="img/coronita.png">
+                </div>
+            </div>
+            <div class="container-img2">
+                <div class="imagen2">
+                    <img src="img/billlar.png" alt="">
+                </div>
+                <div class="text2">
+                    <p>
+                        Licor de calidad = celebración inolvidable de la que todos bien van a hablar.
                     </p>
                 </div>
-                <div class="imagen">
-                    <img src="img/cerveza coronita.png">
-                </div> -->
-            </div>
-            <div class="container-img">
-                
             </div>
         </div>
-        <div class="container3"></div>
-        <div class="footer"></div>
+        <footer>
+            <div class="footer-siguenos">
+                <p>Siguenos en:</p>
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <div class="footer-contacto">
+                <p>Siguenos en:</p>
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <div class="footer-horarios">
+
+            </div>
+        </footer>
     </div>
 </body>
 
