Pagina principal terminada

--- a/index.html
+++ b/index.html
@@ -105,16 +105,25 @@
         <footer>
             <div class="footer-siguenos">
                 <p>Siguenos en:</p>
-                <img src="" alt="">
-                <img src="" alt="">
+                <a href="https://www.facebook.com/dmpolanco2010?mibextid=ZbWKwL" target="_blank"><img
+                        src="img/facebook.png" alt=""></a>
+                <a href="https://instagram.com/diana.polanco?igshid=YmMyMTA2M2Y=" target="_blank"><img
+                        src="img/instagram.png" alt=""></a>
             </div>
             <div class="footer-contacto">
-                <p>Siguenos en:</p>
-                <img src="" alt="">
-                <img src="" alt="">
+                <p>Contacto</p>
+                <div class="alinear">
+                    <a href="/"><img src="img/whatsapp.png" alt=""></a><span class="img">317 5826001</span>
+                </div>
+                <div class="alinear">
+                    <a href="/"><img src="img/panorama.png" alt=""></a><span>dmpolanco@hotmail.com</span>
+                </div>
             </div>
             <div class="footer-horarios">
-
+                <p>Horarios</p>
+                <p>Lun - Vie: 8:00 - 20:00</p>
+                <p>Sabado: 9:00 - 19:00</p>
+                <p>Domingo: 9:00 - 20:00</p>
             </div>
         </footer>
     </div>
