--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="/"><img src="img/carrito de compras.png" alt="carrito" class="img" /></a>
                     </li>
                     <li>
-                        <a href="/"><img src="img/usuario.png" alt="login" class="img" /></a>
+                        <a href="Login/index.html"><img src="img/usuario.png" alt="login" class="img" /></a>
                     </li>
                 </ul>
             </div>
