--- a/Login/index.html
+++ b/Login/index.html
@@ -54,10 +54,10 @@
                 <input type="submit" value="Ingresar" />
             </div>
             <div class="enlace mar">
-                <a href="http://" rel="noopener noreferrer">Registrarse</a>
+                <a href="/RegistroUsuarios/Registro.html" rel="noopener noreferrer">Registrarse</a>
             </div>
             <div class="enlace1 mar1">
-                <a href="http://" rel="noopener noreferrer">¿Has olvidado tu contraseña?</a>
+                <a href="/" rel="noopener noreferrer">¿Has olvidado tu contraseña?</a>
             </div>
         </form>
     </div>
