--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Patio Eventos Disco Bar</title>
     <link rel="stylesheet" href="inicio.css" />
+    <link rel="icon" href="img/patiol eventos-PhotoRoom.png-PhotoRoom.png">
+    <title>Patio Eventos Disco Bar</title>
 </head>
 
 <body>
@@ -19,13 +20,13 @@
                 </div>
                 <ul>
                     <li>
-                        <a href="/"><img src="img/lupa.png" alt="lupa" class="img" /></a>
+                        <a href="/"><img src="img/lupa.png" alt="lupa" class="imag"/></a>
                     </li>
                     <li>
-                        <a href="/"><img src="img/carrito de compras.png" alt="carrito" class="img" /></a>
+                        <a href="/"><img src="img/carrito de compras.png" alt="carrito" class="imag" /></a>
                     </li>
                     <li>
-                        <a href="Login/index.html"><img src="img/usuario.png" alt="login" class="img" /></a>
+                        <a href="Login/index.html"><img src="img/usuario.png" alt="login" class="imag" /></a>
                     </li>
                 </ul>
             </div>
