--- a/RegistroUsuarios/Registro.html
+++ b/RegistroUsuarios/Registro.html
@@ -40,7 +40,7 @@
     </header>
 
     <div class="reg">
-        <h1>Registro de usuarios</h1>
+        <h1>Registro de Usuarios</h1>
         <div id="cuerpo">
             <form id="form-login">
                 <div class="cont">
