--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <nav>
                 <ul class="menu-horizontal">
                     <li><a href="/">Inicio</a></li>
-                    <li><a href="/">Entretenimiento</a></li>
+                    <li><a href="/Entretenimiento/index.html">Entretenimiento</a></li>
                     <li>
                         <a href="/">Producto</a>
                         <ul class="menu-vertical">
@@ -114,10 +114,10 @@
             <div class="footer-contacto">
                 <p>Contacto</p>
                 <div class="alinear">
-                    <a href="/"><img src="img/whatsapp.png" alt=""></a><span class="img">317 5826001</span>
+                    <a href="/"><img src="img/whatsapp.png" alt=""></a><p class="p">317 5826001</p>
                 </div>
                 <div class="alinear">
-                    <a href="/"><img src="img/panorama.png" alt=""></a><span>dmpolanco@hotmail.com</span>
+                    <a href="/"><img src="img/panorama.png" alt=""></a><p>dmpolanco@hotmail.com</p>
                 </div>
             </div>
             <div class="footer-horarios">
