--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                     <li>
                         <a href="/">Producto</a>
                         <ul class="menu-vertical">
-                            <li><a href="/">Cerveza</a></li>
+                            <li><a href="/Productos cerveza/index.html">Cerveza</a></li>
                             <li><a href="/">Whisky</a></li>
                         </ul>
                     </li>
-                    <li><a href="/">Proveedores</a></li>
+                    <li><a href="/Reguistro de Proveedor/index.html">Proveedores</a></li>
                 </ul>
             </nav>
         </header>
