--- a/Entretenimiento/index.html
+++ b/Entretenimiento/index.html
@@ -32,15 +32,15 @@
         <nav>
             <ul class="menu-horizontal">
                 <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/">Entretenimiento</a></li>
+                <li><a href="index.html">Entretenimiento</a></li>
                 <li>
                     <a href="/">Producto</a>
                     <ul class="menu-vertical">
-                        <li><a href="/">Cerveza</a></li>
+                        <li><a href="/Productos cerveza/index.html">Cerveza</a></li>
                         <li><a href="/">Whisky</a></li>
                     </ul>
                 </li>
-                <li><a href="/">Proveedores</a></li>
+                <li><a href="/Reguistro de Proveedor/index.html">Proveedores</a></li>
             </ul>
         </nav>
     </header>
