--- a/Productos cerveza/index.html
+++ b/Productos cerveza/index.html
@@ -26,7 +26,7 @@
         </div>
         <nav>
             <ul class="menu-horizontal">
-                <li><a href="/">Inicio</a></li>
+                <li><a href="/Inicio/index.html">Inicio</a></li>
                 <li><a href="/Entretenimiento/index.html">Entretenimiento</a></li>
                 <li>
                     <a href="/">Producto</a>
@@ -46,31 +46,50 @@
         <input type="radio" id="2" name="image-slide" hidden>
         <input type="radio" id="3" name="image-slide" hidden>
         <input type="radio" id="4" name="image-slide" hidden>
+        <input type="radio" id="5" name="image-slide" hidden>
+        <input type="radio" id="6" name="image-slide" hidden>
 
         <div class="slide">
             <div class="item-slide">
-                <img src="image/aguilas (1).jpg" alt="">
+                <img src="image/fondoslider1.jpg" alt="">
             </div>
 
             <div class="item-slide">
-                <img src="image/pieces (1).jpg" alt="">
+                <img src="image/fondoclub.jpg" alt="">
             </div>
 
             <div class="item-slide">
                 <img src="image/5c34ee820e4f1.jpeg" alt="">
+            </div>
+            <div class="item-slide">
+                <img src="image/fondoagula3.jpg" alt="">
+            </div>
+            <div class="item-slide">
+                <img src="image/fondopaker.jpg" alt="">
+            </div>
+            <div class="item-slide">
+                <img src="image/fondocosteñita.jpg" alt="">
             </div>
         </div>
 
         <div class="pagination">
             <label class="pagination-item" for="1">
-                <img src="image/aguilas (1).jpg" alt="">
+                <img src="image/fondoslider1.jpg" alt="">
             </label>
             <label class="pagination-item" for="2">
-                <img src="image/pieces (1).jpg" alt="">
+                <img src="image/fondoclub.jpg" alt="">
             </label>
+            <label class="pagination-item" for="3">
+                <img src="image/5c34ee820e4f1.jpeg" alt="">
             </label>
             <label class="pagination-item" for="4">
-                <img src="image/5c34ee820e4f1.jpeg" alt="">
+                <img src="image/fondoagula3.jpg" alt="">
+            </label>
+            <label class="pagination-item" for="5">
+                <img src="image/fondopaker.jpg" alt="">
+            </label>
+            <label class="pagination-item" for="6">
+                <img src="image/fondocosteñita.jpg" alt="">
             </label>
         </div>
 
