--- a/RegistroUsuarios/Registro.html
+++ b/RegistroUsuarios/Registro.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link type="text/css" href="registro.css" rel="stylesheet" />
-    <link rel="incon" href="img/patiol eventos-PhotoRoom.png-PhotoRoom.png">
+    <link rel="icon" href="img/patiol eventos-PhotoRoom.png-PhotoRoom.png">
     <title>Registro</title>
 </head>
 
@@ -18,20 +18,20 @@
                 <h1>Disco Bar</h1>
             </div>
             <ul>
-                <li><a href="/index.html"><img src="img/casa.png" alt="lupa" class="img" /></a></li>
+                <li><a href="/Inicio/index.html"><img src="img/casa.png" alt="lupa" class="img" /></a></li>
                 <li><a href="/"><img src="img/carrito de compras.png" alt="carrito" class="img" /></a></li>
                 <li><a href="/"><img src="img/usuario.png" alt="login" class="img" /></a></li>
             </ul>
         </div>
         <nav>
             <ul class="menu-horizontal">
-                <li><a href="/">Inicio</a></li>
-                <li><a href="/">Entretenimiento</a></li>
+                <li><a href="/Inicio/index.html">Inicio</a></li>
+                <li><a href="/Entretenimiento/index.html">Entretenimiento</a></li>
                 <li>
                     <a href="/">Producto</a>
                     <ul class="menu-vertical">
-                        <li><a href="/">Cerveza</a></li>
-                        <li><a href="/">Whisky</a></li>
+                        <li><a href="/Productos cerveza/index.html">Cerveza</a></li>
+                        <li><a href="/Producto whisky/index.html">Whisky</a></li>
                     </ul>
                 </li>
                 <li><a href="/">Proveedores</a></li>
