--- a/Descuento/index.html
+++ b/Descuento/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/patiol eventos-PhotoRoom.png-PhotoRoom.png">
     <title>Descuentos</title>
 </head>
 <body>
@@ -16,23 +17,23 @@
                 
             </div>
             <ul>
-                <li><a href="/index.html"><img src="img/casa.png" alt="lupa" class="img" /></a></li>
+                <li><a href="/Inicio/index.html"><img src="img/casa.png" alt="lupa" class="img" /></a></li>
                 <li><a href="/"><img src="img/lupa.png" alt="carrito" class="img" /></a></li>
                 <li><a href="/"><img src="img/usuario.png" alt="login" class="img" /></a></li>
             </ul>
         </div>
         <nav>
             <ul class="menu-horizontal">
-                <li><a href="/">Inicio</a></li>
-                <li><a href="/">Entretenimiento</a></li>
+                <li><a href="/Inicio/index.html">Inicio</a></li>
+                <li><a href="/Entretenimiento/index.html">Entretenimiento</a></li>
                 <li>
-                    <a href="/">Producto</a>
+                    <a href="">Producto</a>
                     <ul class="menu-vertical">
-                        <li><a href="/">Cerveza</a></li>
-                        <li><a href="/">Whisky</a></li>
+                        <li><a href="/Productos cerveza/index.html">Cerveza</a></li>
+                        <li><a href="/Producto whisky/index.html">Whisky</a></li>
                     </ul>
                 </li>
-                <li><a href="/">Proveedores</a></li>
+                <li><a href="/Reguistro de Proveedor/index.html">Proveedores</a></li>
             </ul>
         </nav>
     </header>
