--- a/Inicio/index.html
+++ b/Inicio/index.html
@@ -53,16 +53,16 @@
         <div class="slider">
             <div class="item"><img src="img/Grupo 1.png" /></div>
             <div class="item"><img src="img/Grupo 2.png" /></div>
-            <div class="item"><img src="img/Grupo 3.png" /></div>
-            <div class="item"><img src="img/Grupo 4.png" /></div>
-            <div class="item"><img src="img/Grupo 5.png" /></div>
+            <div class="item"><img src="img/imagenbebida.jpg" /></div>
+            <div class="item"><img src="img/cervezas.jpg" /></div>
+            <div class="item"><img src="img/ronesimagen.jpg" /></div>
         </div>
         <div class="pagina">
             <label class="item-pagina" for="1"><img src="img/Grupo 1.png" /></label>
             <label class="item-pagina" for="2"><img src="img/Grupo 2.png" /></label>
-            <label class="item-pagina" for="3"><img src="img/Grupo 3.png" /></label>
-            <label class="item-pagina" for="4"><img src="img/Grupo 4.png" /></label>
-            <label class="item-pagina" for="5"><img src="img/Grupo 5.png" /></label>
+            <label class="item-pagina" for="3"><img src="img/imagenbebida.jpg" /></label>
+            <label class="item-pagina" for="4"><img src="img/cervezas.jpg" /></label>
+            <label class="item-pagina" for="5"><img src="img/ronesimagen.jpg" /></label>
         </div>
     </div>
     <div class="container1">
@@ -85,7 +85,7 @@
                 <p>
                     Si hay licor también hay diversión por montón.
                 </p>
-                <a href="/">Descuentos</a>
+                <a href="/Descuento/index.html">Descuentos</a>
             </div>
             <div class="imagen1">
                 <img src="img/coronita.png">
