--- a/Producto whisky/index.html
+++ b/Producto whisky/index.html
@@ -161,6 +161,32 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer-siguenos">
+            <p>Siguenos en:</p>
+            <a href="https://www.facebook.com/dmpolanco2010?mibextid=ZbWKwL" target="_blank"><img src="Imagenes/facebook.png"
+                    alt=""></a>
+            <a href="https://instagram.com/diana.polanco?igshid=YmMyMTA2M2Y=" target="_blank"><img
+                    src="Imagenes/instagram.png" alt=""></a>
+        </div>
+        <div class="footer-contacto">
+            <p>Contacto</p>
+            <div class="alinear">
+                <a href="/"><img src="Imagenes/whatsapp.png" alt=""></a>
+                <p class="p">317 5826001</p>
+            </div>
+            <div class="alinear">
+                <a href="/"><img src="Imagenes/panorama.png" alt=""></a>
+                <p>dmpolanco@hotmail.com</p>
+            </div>
+        </div>
+        <div class="footer-horarios">
+            <p>Horarios</p>
+            <p>Lun - Vie: 8:00 - 20:00</p>
+            <p>Sabado: 9:00 - 19:00</p>
+            <p>Domingo: 9:00 - 20:00</p>
+        </div>
+    </footer>
 </body>
 
 </html>
