--- a/Entretenimiento/index.html
+++ b/Entretenimiento/index.html
@@ -22,7 +22,7 @@
                     <a href="/"><img src="image/carrito de compras.png" alt="lupa" class="img" /></a>
                 </li>
                 <li>
-                    <a href="/index.html"><img src="image/casa.png" alt="carrito" class="img" /></a>
+                    <a href="/Inicio/index.html"><img src="image/casa.png" alt="carrito" class="img" /></a>
                 </li>
                 <li>
                     <a href="/"><img src="image/usuario.png" alt="login" class="img" /></a>
@@ -37,7 +37,7 @@
                     <a href="/">Producto</a>
                     <ul class="menu-vertical">
                         <li><a href="/Productos cerveza/index.html">Cerveza</a></li>
-                        <li><a href="/">Whisky</a></li>
+                        <li><a href="/Producto whisky/index.html">Whisky</a></li>
                     </ul>
                 </li>
                 <li><a href="/Reguistro de Proveedor/index.html">Proveedores</a></li>
@@ -48,15 +48,18 @@
         <input type="radio" id="1" name="image-slide" hidden />
         <input type="radio" id="2" name="image-slide" hidden />
         <input type="radio" id="3" name="image-slide" hidden />
+        <input type="radio" id="4" name="image-slide" hidden />
         <div class="slider">
             <div class="item"><img src="image/Natalia1.jpg" /></div>
-            <div class="item"><img src="image/Natalia2.jpg" /></div>
-            <div class="item"><img src="image/Natalia3.jpg" /></div>
+            <div class="item"><img src="image/dominoIMAGEN.jpg" /></div>
+            <div class="item"><img src="image/bar.jpg" /></div>
+            <div class="item"><img src="image/barimagen.jpg" /></div>
         </div>
         <div class="pagina">
             <label class="item-pagina" for="1"><img src="image/Natalia1.jpg" /></label>
-            <label class="item-pagina" for="2"><img src="image/Natalia2.jpg" /></label>
-            <label class="item-pagina" for="3"><img src="image/Natalia3.jpg" /></label>
+            <label class="item-pagina" for="2"><img src="image/dominoIMAGEN.jpg" /></label>
+            <label class="item-pagina" for="3"><img src="image/bar.jpg" /></label>
+            <label class="item-pagina" for="4"><img src="image/barimagen.jpg" /></label>
         </div>
     </div>
     <div class="contedorbox">
