--- a/Entretenimiento/index.html
+++ b/Entretenimiento/index.html
@@ -31,7 +31,7 @@
         </div>
         <nav>
             <ul class="menu-horizontal">
-                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="/Inicio/index.html">Inicio</a></li>
                 <li><a href="index.html">Entretenimiento</a></li>
                 <li>
                     <a href="/">Producto</a>
