--- a/Producto whisky/index.html
+++ b/Producto whisky/index.html
@@ -18,22 +18,22 @@
             </div>
             <ul>
                 <li><a href="/"><img src="imagenes/lupa.png" alt="lupa" class="img" /></a></li>
-                <li><a href="/"><img src="imagenes/casa.png" alt="carrito" class="img" /></a></li>
+                <li><a href="/"><img src="imagenes/carrito de compras.png" alt="carrito" class="img" /></a></li>
                 <li><a href="/"><img src="imagenes/usuario.png" alt="login" class="img" /></a></li>
             </ul>
         </div>
         <nav>
             <ul class="menu-horizontal">
-                <li><a href="/">Inicio</a></li>
-                <li><a href="/">Entretenimiento</a></li>
+                <li><a href="/Inicio/index.html">Inicio</a></li>
+                <li><a href="/Entretenimiento/index.html">Entretenimiento</a></li>
                 <li>
                     <a href="/">Producto</a>
                     <ul class="menu-vertical">
-                        <li><a href="/">Cerveza</a></li>
-                        <li><a href="/">Whisky</a></li>
+                        <li><a href="/Productos cerveza/index.html">Cerveza</a></li>
+                        <li><a href="index.html">Whisky</a></li>
                     </ul>
                 </li>
-                <li><a href="/">Proveedores</a></li>
+                <li><a href="/Reguistro de Proveedor/index.html">Proveedores</a></li>
             </ul>
         </nav>
     </header>
