--- a/Productos cerveza/index.html
+++ b/Productos cerveza/index.html
@@ -32,7 +32,7 @@
                     <a href="/">Producto</a>
                     <ul class="menu-vertical">
                         <li><a href="/Productos cerveza/index.html">Cerveza</a></li>
-                        <li><a href="/">Whisky</a></li>
+                        <li><a href="/Producto whisky/index.html">Whisky</a></li>
                     </ul>
                 </li>
                 <li><a href="/Reguistro de Proveedor/index.html">Proveedores</a></li>
