--- a/Reguistro de Proveedor/index.html
+++ b/Reguistro de Proveedor/index.html
@@ -18,23 +18,23 @@
                 <h1>Disco Bar</h1>
             </div>
             <ul>
-                <li><a href="/"><img src="img/casa.png" alt="lupa" class="img" /></a></li>
+                <li><a href="/Inicio/index.html"><img src="img/casa.png" alt="lupa" class="img" /></a></li>
                 <li><a href="/"><img src="img/carrito-de-compras (3).png" alt="carrito" class="img" /></a></li>
                 <li><a href="/"><img src="img/usuario.png" alt="login" class="img" /></a></li>
             </ul>
         </div>
         <nav>
             <ul class="menu-horizontal">
-                <li><a href="/">Inicio</a></li>
+                <li><a href="/Inicio/index.html">Inicio</a></li>
                 <li><a href="/Entretenimiento/index.html">Entretenimiento</a></li>
                 <li>
                     <a href="/">Producto</a>
                     <ul class="menu-vertical">
                         <li><a href="/Productos cerveza/index.html">Cerveza</a></li>
-                        <li><a href="/">Whisky</a></li>
+                        <li><a href="/Producto whisky/index.html">Whisky</a></li>
                     </ul>
                 </li>
-                <li><a href="/Reguistro de Proveedor/index.html">Proveedores</a></li>
+                <li><a href="index.html">Proveedores</a></li>
             </ul>
         </nav>
     </header>
