--- a/RegistroUsuarios/Registro.html
+++ b/RegistroUsuarios/Registro.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link type="text/css" href="registro.css" rel="stylesheet" />
-    <link rel="icon" href="img/patiol eventos-PhotoRoom.png-PhotoRoom.png">
+    <link rel="icon" href="img/icon.png" type="image/png">
     <title>Registro</title>
 </head>
 
