--- a/Entretenimiento/index.html
+++ b/Entretenimiento/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="image/patiol eventos-PhotoRoom.png-PhotoRoom.png">
+    <link rel="icon" href="image/icon.png" type="image/png">
     <title>Entretenimiento</title>
 </head>
 
