--- a/Login/index.html
+++ b/Login/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="imagen/patiol eventos-PhotoRoom.png-PhotoRoom.png" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="imagen/icon.png" type="image/png"/>
     <title>Login</title>
 </head>
 
