--- a/Reguistro de Proveedor/index.html
+++ b/Reguistro de Proveedor/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/patiol eventos-PhotoRoom.png-PhotoRoom.png">
+    <link rel="icon" href="img/icon.png" type="image/png">
     <link rel="stylesheet" href="estilo.css">
     <title>Proveedor</title>
 </head>
